# learning_testing

./: .gitignore  LICENSE  README.md
ejercicio1/: README.md  fizzbuzz.py  pyproject.toml  test_fizzbuzz.py
ejercicio2/: README.md  fizzbuzz_extenstion.py  pyproject.toml  test_fizzbuzz_extension.py
ejercicio3/: README.md  main.py  pyproject.toml  test_main.py
ejercicio4/: README.md  main.py  pyproject.toml  test_database_config.py  test_main.py
ejercicio4/db/: add_testing_data.sql  database.db
ejercicio4/src/: authentication.py  database_config.py  dates.py
ejercicio5/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.vitest.json  vitest.config.ts
ejercicio5/src/: App.vue  main.ts
ejercicio5/src/assets/: main.css
ejercicio5/src/components/: Login.vue  NotFound.vue  Welcome.vue
ejercicio5/src/router/: index.ts
ejercicio5/tests/: test-utils.ts  vitest-globals.d.ts
ejercicio5/tests/components/: Login.spec.ts  Welcome.spec.ts
ejercicio6/: README.md  main.py  pyproject.toml
ejercicio6/db/: database.db  init_db.sql
ejercicio6/end2endTests/: package-lock.json  package.json
ejercicio6/end2endTests/cypress/e2e/: login_spec.cy.js
ejercicio6/src/: authentication.py  database_config.py
