[tool.poetry]
name = "ejercicio1"
version = "0.1.0"
description = ""
authors = ["Pablo Martínez <pablompg@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
