[tool.poetry]
name = "ejercicio6"
version = "0.1.0"
description = ""
authors = ["Pablo Martínez <pablompg@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
